recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return 0
           ^Tree:6: warning: enclosing method tree has result type Unit: return value discarded
    return 0
    ^Tree:19: error: not enough arguments for method subtree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
    subtree()
           ^